# networks_homework

./: .gitignore  README.md  a.txt  data.csv  data_with_distance.csv  list.txt  makefile  q1.py  q2.py  report.tex  run.sh  test.py  test_data.csv  traceroute-1.txt  traceroute-3.txt  traceroute-4.txt
ML_model/: 195_181_162_195_5201_(Miami,_US).csv  37_19_203_1_5201_(Sofia,_BG).csv  README.MD  miami_US_weights.txt  ml_model.cpp  speedtest_awbb_net_5202_(Amarillo,_US).csv  speedtest_lu_buyvm_net_5201_(Bissen,_LU).csv  speedtest_syd12_au_leaseweb_net_5207_(Sydney,_AU).csv  weights.txt
data/: listed_iperf3_servers.csv
homework_five/: README.md  allgather_ring_1024_0.json  allgather_worker.py  allgather_worker_dist.py  bench_session_fork.py  broadcast_worker.py  broadcast_worker_dist.py  generate_plot_ring.py  generate_plots.py  generate_plots_broadcast.py  run.sh  run_all.py  run_all_broadcast.py
homework_five/allgather_bench/: README.md  README.txt  allgather_results.json  one.json  results.jsonl  session2.json  session4.json  session8.json  tmp.json
homework_four/: README.md  run_experiments.py  sample_output.txt  topology_design.py  visualize_uniform.py
homework_one/: data.csv  data.txt  report.py  run.sh  traceroute-2.txt  traceroute-5.txt
homework_one/pinger/: Cargo.toml
homework_two/: Dockerfile  README.MD  goodput_measure.py  goodput_plot.py  hw3_compare_plot.py  iperf3_client.py  ml_plot.py  run_all.sh  run_hw3.sh  tcp_stats_measure.py  tcp_stats_plot.py
scripts/: question_2_plotter.py
test/: client.py  server.py  terminal_code.txt  test.py
(+91 files in other folders)
